Style the form and add placeholders

--- a/scriptspony/public/css/style.css
+++ b/scriptspony/public/css/style.css
@@ -301,3 +301,9 @@ font-weight:bold;
 div.clearingdiv {
 clear:both;
 }
+
+ul.form {
+     list-style-type: none;
+     padding:0;
+     margin:0;
+}
